# recruit-env

./: .env.example  .gitignore  Dockerfile  README.md  __init__.py  client.py  docker-compose.yml  inference.py  models.py  openenv.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  validate_submission.sh
api/: __init__.py  main.py
baseline/: run_baseline.py
env/: __init__.py  environment.py  fairness.py  models.py  profile_factory.py  rewards.py
explanations/: 00-overview-and-architecture.md  01-project-structure.md  02-models.md  03-environment-core.md  04-profile-factory.md  05-rewards.md  06-fairness.md  07-tasks-and-graders.md  08-api-server.md  09-baseline-agent.md  10-tests.md  11-deployment.md  12-interview-qa.md  README.md
server/: models.py
tasks/: __init__.py  base.py  easy_task.py  hard_task.py  medium_task.py
tests/: test_api.py  test_environment.py  test_graders.py
